VP-4642: Fix jumping product card

--- a/assets/scss/custom/_scaffolding.scss
+++ b/assets/scss/custom/_scaffolding.scss
@@ -6,7 +6,7 @@ a {
   &.btn.btn-link {
     font-family: $link-font-family;
     font-weight: $link-font-weight;
-    border-bottom: 1px solid transparent;
+    //border-bottom: 1px solid transparent;
 
     &:hover,
     &:focus {
